assets/css/styles.css
html, body{
    height: 100%;
}

header{
    background: #c5c8cc;
}

.p-indent{
    text-indent: 50px;
}

a{
    text-decoration: none;
    color: black;
}

.header{
    min-height: 50px;
}

.header-elem{
    min-height: 50px;
    border-radius: 25px;
    background: #8d8c8f;

}

.header-elem-text{
    font-size: 1.5em;
}

/* .drop-btn{
    width: 30%;
} */

#wrap{
    min-height: 100%;
}

#main{
    overflow: auto;
    padding-bottom: 150px;
}

.img-custom{
    max-width: 150px;
    max-height: 150px;
    margin-left: 50px;
}

.portimage{
    margin: 20px auto 20px auto;
    height: 150px;
    width: 200px;
    object-fit: cover;
    opacity: 0.33;
}

.work{
    margin-top: 20px;
    margin-bottom: 20px;
}

.btn-user-message{
    background: rgb(187, 202, 221);
}

.footer{
    position: relative;
    margin-top: -120px;
    height: 120px;
    clear: both;
    padding-top: 20px;
    background: #c5c8cc;
}

.aref-img{
    height: 50px;
    width: 50px;
}
/* 
@media screen and (max-width: 716px){
    .header-elem-text{
        font-size: 1.25em;
    }
};

@media screen and (max-width: 602px){
    .header-elem-text{
        font-size: 0.8em;
    }
} */

/* div#my-ports > a > h3:hover{
    color: #fff;
    background-color: black;
} */

a:hover{
    color: rgb(121, 121, 121);
}

@media screen and (max-width: 768px){
    .header-elem{
        -ms-flex: 0 0 38%!important;
        flex: 0 0 38%!important;
        max-width: 38%!important;
    }
}

@media screen and (max-width: 576px){

    .header-elem{
        -ms-flex: 0 0 100%!important;
        flex: 0 0 100%!important;
        max-width: 100%!important;
        margin-left: 0!important;
    }

    .header{
        max-height: 100px;
    }

    .img-custom{
        display: block;
        margin-left: auto!important;
        margin-right: auto!important;
        max-width: 200px;
        max-height: 200px;
        text-align: center!important;
    }

    /* .header-elem-text{
        font-size: 4vw;
    } */
    
    .header-elem-nav-btn{
        text-align: center!important;
    }
}

